<?xml version="1.0"?>
<package format="2">
  <name>okvis_ros</name>
  <version>1.1.3</version>
  <description>The okvis_ros package</description>

  <maintainer email="s.leutenegger@imperial.ac.uk">Stefan Leutenegger</maintainer>
  <author>Stefan Leutenegger</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
 
  <depend>libgoogle-glog-dev</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>gps_common</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
</package>
